# SwimScraper

./: README.md  collegeSwimmingTeams.csv  getTeamList.py  helpers.py  mainScraper.py  setup.cfg  tests.py
src/SwimScraper/: SwimScraper.py  collegeSwimmingTeams.csv  getTeamList.py  mainScraper.py
src/SwimScraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: tests.py
