[metadata]
name = SwimScraper
version = 0.0.4
author = Matthew Flancer
author_email = maf291@pitt.edu
description = A package to scrape professional and college swimming data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maflancer/SwimScraper
project_urls =
    Bug Tracker = https://github.com/maflancer/SwimScraper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    bs4
    pandas
    selenium
    webdriver_manager

[options.packages.find]
where = src
